<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="top.thinapps.recoverdeletedphotos.ui.HomeFragment"
        android:label="@string/app_name">

        <action
            android:id="@+id/action_home_to_scan"
            app:destination="@id/scanFragment" />

        <!-- navigate to RecoveredFragment (photos/videos) -->
        <action
            android:id="@+id/action_home_to_recovered"
            app:destination="@id/recoveredFragment" />

        <!-- navigate to RecoveredAudioFragment -->
        <action
            android:id="@+id/action_home_to_recovered_audio"
            app:destination="@id/recoveredAudioFragment" />

    </fragment>

    <fragment
        android:id="@+id/scanFragment"
        android:name="top.thinapps.recoverdeletedphotos.ui.ScanFragment"
        android:label="@string/scan_title">

        <argument
            android:name="type"
            app:argType="string"
            android:defaultValue="PHOTOS" />

        <action
            android:id="@+id/action_scan_to_results"
            app:destination="@id/resultsFragment" />
    </fragment>

    <fragment
        android:id="@+id/resultsFragment"
        android:name="top.thinapps.recoverdeletedphotos.ui.ResultsFragment"
        android:label="@string/results_title" />

    <!-- RecoveredFragment destination (photos/videos) -->
    <fragment
        android:id="@+id/recoveredFragment"
        android:name="top.thinapps.recoverdeletedphotos.ui.RecoveredFragment"
        android:label="@string/recovered_media_title" />

    <!-- RecoveredAudioFragment destination -->
    <fragment
        android:id="@+id/recoveredAudioFragment"
        android:name="top.thinapps.recoverdeletedphotos.ui.RecoveredAudioFragment"
        android:label="@string/recovered_audio_title" />

</navigation>
